--- a/css/main.css
+++ b/css/main.css
@@ -10,8 +10,9 @@ html, body {
 }
 
 .container {
+    margin: 0px auto;
     padding: 0 15px;
-    width: 1170px;
+    max-width: 1200px;
 }
 
 .nav {
@@ -19,4 +20,21 @@ html, body {
     background-color: #171718;
     color: #fff;
     border-bottom: 1px solid #262923;
+}
+
+.nav-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    column-gap: 40px;
+    row-gap: 20px;
+    flex-wrap: wrap;
+}
+
+.logo {
+    color: white;
+    font-size: 24px;
+    font-family: 'Poppins', sans-serif;
+    text-decoration: none;
+    font-weight: 700;
 }
