--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,17 @@
 font-family: 'Poppins', sans-serif;
 */
 
+:root {
+    --black: #171718;
+    --black-border: #262923;
+    --white: #fff;
+    --purple: #5C62EC;
+    --dark-bg: var(--black);
+    --dark-border: var(--black-border);
+    --header-text: var(--white);
+    --accent: var(--purple);
+}
+
 html, body {
     font-family: 'DM Sans', sans-serif;
 }
@@ -17,9 +28,9 @@ html, body {
 
 .nav {
     padding: 20px 0px;
-    background-color: #171718;
-    color: #fff;
-    border-bottom: 1px solid #262923;
+    background-color: var(--dark-bg);
+    color: var(--header-text);
+    border-bottom: 1px solid var(--dark-border);
 }
 
 .nav-row {
@@ -32,7 +43,7 @@ html, body {
 }
 
 .logo {
-    color: white;
+    color: var(--header-text);
     font-size: 20px;
     font-family: 'Poppins', sans-serif;
     text-decoration: none;
@@ -41,14 +52,32 @@ html, body {
 
 .nav-list {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
-    column-gap: 40px;
+    column-gap: 20px;
     font-size: 16px;
     font-weight: 500;
     font-family: 'Poppins', sans-serif;
 }
 
 .nav-list__link {
-    color: white;
+    color: var(--header-text);
     text-decoration: none;
+}
+
+.nav-list__link--active {
+    position: relative;
+}
+
+.nav-list__link--active::before {
+    content: "";
+
+    position: absolute;
+    left: 0;
+    top: 100%;
+    content: "";
+    display: block;
+    height: 2px;
+    width: 100%;
+    background-color: var(--accent);
 }
