--- a/css/main.css
+++ b/css/main.css
@@ -14,10 +14,13 @@ font-family: 'Poppins', sans-serif;
     --dark-border: var(--black-border);
     --header-text: var(--white);
     --accent: var(--purple);
+    --text-color: var(var(--black));
 }
 
 html, body {
     font-family: 'DM Sans', sans-serif;
+    letter-spacing: -0.5px;
+    color: var(--text-color)
 }
 
 .container {
@@ -31,6 +34,7 @@ html, body {
     background-color: var(--dark-bg);
     color: var(--header-text);
     border-bottom: 1px solid var(--dark-border);
+    letter-spacing: normal;
 }
 
 .nav-row {
@@ -80,4 +84,59 @@ html, body {
     height: 2px;
     width: 100%;
     background-color: var(--accent);
+}
+
+.header {
+    background-color: var(--dark-bg);
+    color: var(--header-text);
+    min-height: 600px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.header__wrapper {
+    padding: 0px 15px;
+    max-width: 660px;
+}
+
+.header__title {
+    margin-bottom: 20px;
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 1.4;
+}
+
+.header__title strong {
+    font-size: 60px;
+    font-size: 700;
+}
+
+.header__title em {
+    font-style: normal;
+    color: var(--accent)
+}
+
+.header__text {
+    margin-bottom: 40px;
+    font-size: 18px;
+    line-height: 1.33;
+}
+
+.header__text p + p {
+    margin-top: 1em;
+}
+
+.btn {
+    display: inline-block;
+    max-height: 48px;
+    padding: 12px 28px;
+    border-radius: 5px;
+    background-color: var(--accent);
+    color: var(--text-color);
+    text-decoration: none;
+    letter-spacing: 0.15px;
+    font-size: 16px;
+    font-weight: 500;
 }
