--- a/css/main.css
+++ b/css/main.css
@@ -67,6 +67,11 @@ html, body {
 .nav-list__link {
     color: var(--header-text);
     text-decoration: none;
+    transition: opacity 0.2s ease;
+}
+
+.nav-list__link:hover {
+    opacity: 0.8;
 }
 
 .nav-list__link--active {
@@ -139,4 +144,14 @@ html, body {
     letter-spacing: 0.15px;
     font-size: 16px;
     font-weight: 500;
+    transition: opacity 0.2s ease-in;
+}
+
+.btn:hover {
+    opacity: 0.8;
+}
+
+.btn:active {
+    position: relative;
+    top: 1px;
 }
