--- a/css/main.css
+++ b/css/main.css
@@ -158,3 +158,43 @@ html, body {
     position: relative;
     top: 1px;
 }
+
+.section {
+    padding: 70px 0px;
+
+}
+
+.title-1 {
+    margin-bottom: 60px;
+    font-size: 60px;
+    font-weight: 600;
+    line-height: 1.3;
+    color: var(--accent);
+    text-align: center; 
+}
+
+.projects {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 30px;
+    row-gap: 30px;
+}
+
+.project {
+    max-width: 370px;
+    background-color: var(--white);
+    box-shadow: 0px 5px 35px 0px #00000040;
+    border-radius: 10px;
+}
+
+.project__img {
+    border-radius: 10px;
+}
+
+.project__title {
+    margin: 15px 20px 25px;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 1.3;
+    color: var(--black)
+} 
