--- a/css/main.css
+++ b/css/main.css
@@ -198,3 +198,39 @@ html, body {
     line-height: 1.3;
     color: var(--black)
 } 
+
+.none {
+    display: none !important;
+}
+
+.footer {
+    background-color: var(--dark-bg);
+    padding: 60px 0px 50px;
+    color: var(--header-text);
+}
+
+.footer__wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 27px;
+}
+
+.social {
+    display: flex;
+    column-gap: 30px;
+}
+
+.social__item img {
+    border-radius: 5px;
+    height: 36px;
+    width: 36px;
+}
+
+.copyright {
+    font-size: 16px;
+}
+
+.copyright p + p {
+    margin-top: 0.5em;
+}
