--- a/css/main.css
+++ b/css/main.css
@@ -234,3 +234,52 @@ html, body {
 .copyright p + p {
     margin-top: 0.5em;
 }
+
+.project-details {
+    max-width: 865px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.project-details__cover {
+    max-width: 100%;
+    margin-bottom: 40px;
+    box-shadow: 0px 5px 35px 0px #00000040;
+    border-radius: 10px;
+}
+
+.project-details__desc {
+    font-weight: 700;
+    margin-bottom: 30px;
+    font-size: 24px;
+    line-height: 1.3;
+}
+
+.project-details a {
+    color: var(--black);
+    font-weight: 700;
+    font-size: 16px
+}
+
+.btn-outline {
+    max-height: 48px;
+    border-radius: 5px;
+    padding: 12px 20px;
+    border: 1px solid;
+    display: flex;
+    column-gap: 10px;
+    align-items: center;
+    transition: opacity 0.2s ease-in;
+}
+
+.btn-outline:hover {
+    opacity: 0.8;
+}
+
+.btn-outline:active {
+    position: relative;
+    top: 1px;
+}
