--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,10 @@ font-family: 'Poppins', sans-serif;
 html, body {
     font-family: 'DM Sans', sans-serif;
     letter-spacing: -0.5px;
-    color: var(--text-color)
+    color: var(--text-color);
+    display: flex;
+    flex-direction: column;
+    height: 100%;
 }
 
 .container {
@@ -207,6 +210,7 @@ html, body {
     background-color: var(--dark-bg);
     padding: 60px 0px 50px;
     color: var(--header-text);
+    margin-top: auto;
 }
 
 .footer__wrapper {
@@ -283,3 +287,33 @@ html, body {
     position: relative;
     top: 1px;
 }
+
+.title-2 {
+    font-size: 40px;
+    line-height: 1.3;
+    margin-bottom: 20px;
+    font-weight: 700;
+}
+
+.content-list {
+    max-width: 570px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    row-gap: 40px;
+    margin: 0 auto;
+}
+
+.content-list a {
+    color: var(--accent);
+}
+.content-list__item {
+    font-size: 18px;
+    line-height: 1.5;
+}
+
+.content-list__item p + p {
+    margin-top: 0.5em;
+}
+
