--- a/css/main.css
+++ b/css/main.css
@@ -42,7 +42,7 @@ html, body {
 
 .nav-row {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
     column-gap: 40px;
     row-gap: 20px;
@@ -55,6 +55,7 @@ html, body {
     font-family: 'Poppins', sans-serif;
     text-decoration: none;
     font-weight: 700;
+    margin-right: auto;
 }
 
 .nav-list {
@@ -320,6 +321,40 @@ html, body {
     margin-top: 0.5em;
 }
 
+.dark-mode-btn {
+    display: flex;
+    justify-content: space-between;
+    width: 51px;
+    height: 26px;
+    background-color: #272727;
+    border-radius: 50px;
+    padding: 5px;
+    position: relative;
+    order: 9;
+}
+
+.dark-mode-btn::before {
+    position: absolute;
+    top: 1px;
+    left: 1px;
+    content: "";
+    display: block;
+    height: 24px;
+    width: 24px;
+    border-radius: 50%;
+    background-color: var(--white);
+    transition: left 0.2s ease-in;
+}
+
+.dark-mode-btn--active::before {
+    left: 26px;
+} 
+
+.dark-mode-btn__icon {
+    position: relative;
+    z-index: 9;
+}
+
 @media (max-width: 620px) {
     .header__title {
         font-size: 30px;
@@ -382,6 +417,14 @@ html, body {
 
     .project-details__desc {
         font-size: 22px;
+    }
+
+    .nav-row {
+        justify-content: space-between;
+    }
+
+    .dark-mode-btn {
+        order: 0;
     }
 }
 
