--- a/css/main.css
+++ b/css/main.css
@@ -15,15 +15,31 @@ font-family: 'Poppins', sans-serif;
     --header-text: var(--white);
     --accent: var(--purple);
     --text-color: var(var(--black));
+    --page-bg: var(--white);
+    --text-color: var(var(--black));
+    --title-1: var(--accent);
+    --project-card-bg: var(--white);
+    --project-card-text: var(--black);
+    --box-shadow: 0px 5px 35px 0px #00000040;
+}
+
+.dark {
+    --page-bg: #252526;
+    --text-color: var(--white);
+    --title-1: var(--white);
+    --project-card-bg: var(--black);
+    --project-card-text: var(--white);
+    --box-shadow: 0px 5px 35px 0px rgba(0, 0, 0, 0.8);
 }
 
 html, body {
     font-family: 'DM Sans', sans-serif;
     letter-spacing: -0.5px;
-    color: var(--text-color);
     display: flex;
     flex-direction: column;
-    height: 100%;
+    min-height: 100%;
+    background-color: var(--page-bg);
+    color: var(--text-color);
 }
 
 .container {
@@ -175,7 +191,7 @@ html, body {
     font-size: 60px;
     font-weight: 600;
     line-height: 1.3;
-    color: var(--accent);
+    color: var(--title-1);
     text-align: center; 
 }
 
@@ -189,12 +205,12 @@ html, body {
 
 .project {
     max-width: 370px;
-    background-color: var(--white);
-    box-shadow: 0px 5px 35px 0px #00000040;
+    background-color: var(--project-card-bg);
+    box-shadow: var(--box-shadow);
     border-radius: 10px;
 }
 
-.project__img {
+.project img {
     border-radius: 10px;
 }
 
@@ -203,7 +219,7 @@ html, body {
     font-weight: 700;
     font-size: 24px;
     line-height: 1.3;
-    color: var(--black)
+    color: var(--project-card-text);
 } 
 
 .none {
@@ -281,6 +297,7 @@ html, body {
     column-gap: 10px;
     align-items: center;
     transition: opacity 0.2s ease-in;
+    background-color: var(--white);
 }
 
 .btn-outline:hover {
